Your commit message

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -46,6 +46,14 @@ spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
 spring.web.cors.allowed-headers=*
 spring.web.cors.allow-credentials=true
 
+
+###################### AWS S3 CONFIG ###############################
+
+aws.s3.bucket-name=your-car-rental-bucket-name
+aws.s3.region=us-east-1
+aws.accessKeyId=your-aws-access-key-id  
+aws.secretKey=your-aws-secret-access-key
+
 ###################### ACTUATOR CONFIG (Optional) ###############
 
 management.endpoints.web.exposure.include=health,info
@@ -65,4 +73,5 @@ management.endpoint.health.enabled=true
 
 # For multi-environment setup
 # spring.profiles.active=prod
+
 
